# codeare

./: .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.win32  Makefile  Makefile.am  Makefile.in  Makefile.win32  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
doc/api/: CMakeLists.txt  Makefile.am  Makefile.in  doxy-codeare.conf.in
doc/api/ug/: matrix.dox
doc/site/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  nav.js  screen.css  sh_style.css
doc/site/xml/: build.xml  contact.xml  developerguide.html  developerguide.html~  developerguide.xml  download.xml  gettingstarted.xml  gettingstarted.xml~  index.xml  install.xml  userguide.xml  userguide.xml~
doc/site/xsl/: codeare.org.xsl  codeare.org.xsl~
src/: .gitignore  BLACS.hpp  BLAS.hpp  CMakeLists.txt  Configurable.h  Configurable.hpp  Connection.hpp  Connector.hpp  CorbaExceptions.hpp  DataBase.cpp  DataBase.hpp  DllExport.h  DummyRecon.cpp  DummyRecon.h  DumpToFile.cpp  DumpToFile.h  FFT.cpp  FFT.hpp  FunctorContainer.cpp  FunctorContainer.hpp  GenericRegrid.cpp  GenericRegrid.h  Grid.cpp  Grid.hpp  HannWindow.cpp  HannWindow.h  InvertOrder.cpp  InvertOrder.h  Lapack.hpp  Loader.h  Loader.h.in  Loader.hpp.in  LocalConnector.cpp  LocalConnector.hpp  Makefile.am  Makefile.in  Makefile.w64  Makefile.win32  Matrix.cpp  Matrix.h  (+57 more)
src/check/: t_workspace.cpp
src/core/: CMakeLists.txt  Configurable.hpp  Loader.hpp.in  Makefile.am  Makefile.in  Params.hpp  Queue.cpp  Queue.hpp  ReconContext.cpp  ReconContext.hpp  ReconStrategy.hpp  Toolbox.cpp  Toolbox.hpp  Workspace.cpp  Workspace.hpp  cycle.h
src/doc/: mainpage.ixx  matrix.ixx
src/matrix/: AVXTraits.hpp  AVXTratis.hpp  Access.hpp  Algos.hpp  AlignmentAllocator.hpp  Allocator.hpp  Assert.hpp  AssignmentHandler.hpp  BLACS.hpp  BLAS.hpp  CGRAPPA.hpp  CMakeLists.txt  CSENSE.hpp  CX.cpp  CX.hpp  Complex.hpp  ConstNoConstView.hpp  Container.hpp  Creators.hpp  DFT.cpp  DFT.hpp  DWT.cpp  DWT.hpp  DWTTraits.hpp  FFT.cpp  FFT.hpp  FFT.lo  FFTWTraits.hpp  FT.hpp  GRAPPA.f  Grid.hpp  ICE.hpp  IO.hpp  Interpolate.hpp  Lapack.hpp  LapackTraits.hpp  MCGLS.hpp  MITK.cpp  MITK.hpp  MLInterface.hpp  (+46 more)
src/matrix/.deps/: FFT.Plo
src/matrix/arithmetic/: Makefile  Makefile.am  Makefile.in  Makefile.w64  Trigonometry.hpp  t_abs.cpp  t_acos.cpp  t_asin.cpp  t_atan2.cpp  t_ceil.cpp  t_complex.cpp  t_cos.cpp  t_eadd.cpp  t_ediv.cpp  t_emul.cpp  t_epow.cpp  t_esub.cpp  t_exp.cpp  t_fliplr.cpp  t_flipud.cpp  t_floor.cpp  t_gtoreq.cpp  t_isnan.cpp  t_log.cpp  t_log10.cpp  t_nrmse.cpp  t_resize.cpp  t_round.cpp  t_sin.cpp  t_sinh.cpp  t_size.cpp  t_tan.cpp
src/matrix/curves/: LocalMaxima.hpp
src/matrix/dwt/: CMakeLists.txt  DWT.cpp  DWT.hpp  DWT2.hpp  DWTTraits.hpp  ElemTypeTraits.hpp  Makefile.am  Makefile.in  Wavelet.hpp  codeare-dwt.h
src/matrix/ft/: CGRAPPA.cpp  CGRAPPA.hpp  CMakeLists.txt  CSENSE.cpp  CSENSE.hpp  CS_TSENSE.cpp  CS_TSENSE.hpp  CS_XSENSE.cpp  CS_XSENSE.hpp  DFT.cpp  DFT.hpp  FFTWTraits.hpp  FT.hpp  GRAPPA.f  GRAPPATraits.hpp  Makefile.am  Makefile.in  NCSENSE.cpp  NCSENSE.hpp  NFFT.cpp  NFFT.hpp  NFFTTraits.hpp  SEM.hpp  codeare-ft.h  test.cpp
src/matrix/interp/: Interpolate.hpp  Makefile.in  MedianFilter.hpp  PolyVal.hpp  Resample.hpp  Smooth.hpp  loess.h
src/matrix/io/: CODFile.hpp  DicomFile.cpp  DicomFile.hpp  HDF5File.hpp  IOContext.hpp  IOFile.hpp  ISMRMRD.hpp  MLFile.hpp  Makefile.in  NIFile.hpp  PIO.hpp  Print.hpp  RawParser.hpp  SyngoFile.hpp  SyngoHeader.hpp  SyngoMRProtocol.hpp  VBFile.hpp  VDFile.hpp  VXFile.hpp  mdhVB15.hpp
src/matrix/linalg/: Lapack.cpp  Lapack.hpp  LapackTraits.hpp  MLInterface.hpp  Makefile.am  Makefile.in  codeare-linalg.h  t_chol.cpp  t_dot.cpp  t_eig.cpp  t_gemm.cpp  t_gemv.cpp  t_inv.cpp  t_norm.cpp  t_pinv.cpp  t_svd.cpp
src/matrix/mpi/: Grid.cpp  Makefile.in  PMatrix.hpp
src/matrix/mri/: MRI.cpp  MRI.hpp  Makefile.am  Makefile.in  codeare-mri.h
src/matrix/ocl/: #oclAMDBlasTraits.hpp#  oclAMDBlasFunctor.hpp  oclAMDBlasObject.hpp  oclAMDBlasTraits.hpp  oclAsyncFunctionObject.hpp  oclAsyncKernelObject.hpp  oclCPUDataObject.hpp  oclConnection.cpp  oclConnection.hpp  oclDWT.hpp  oclDataObject.hpp  oclDataWrapper.hpp  (+13 more)
src/misc/: AppleDigest.hpp  Demangle.hpp  Digest.hpp  SimpleTimer.hpp  Tokenizer.hpp  Waitbar.hpp
src/modules/: AFI.cpp  AFI.hpp  BlochSim.hpp  CGNR.hpp  CGSENSE.cpp  CGSENSE.h  CGSENSE.hpp  CMakeLists.txt  CPUSimulator.cpp  CPUSimulator.hpp  CoilCompression.cpp  CoilCompression.hpp  CompressedSensing.cpp  CompressedSensing.hpp  DWT.cpp  DWT.hpp  DirectMethod.cpp  DirectMethod.hpp  DummyRecon.cpp  DummyRecon.h  DummyRecon.hpp  DumpToFile.cpp  DumpToFile.h  DumpToFile.hpp  EstimateSensitivities.cpp  EstimateSensitivities.hpp  EstimateSensitivitiesRadialVIBE.cpp  EstimateSensitivitiesRadialVIBE.hpp  FFT.cpp  FFT.hpp  GPU.hpp  GPUSimulator.cl  GPUSimulator.cpp  GPUSimulator.hpp  GRAPPA.cpp  GRAPPA.hpp  GRASP.cpp  GRASP.hpp  GenericRegrid.cpp  GenericRegrid.h  (+50 more)
src/mongoose/: CMakeLists.txt  Makefile.am  Makefile.in  MongooseService.cpp  MongooseService.hpp
src/nfft/: Makefile.am  Makefile.in  NFFTStub.hpp  NFFTTraits.hpp  nfftstub.c  nfftstub.h
src/optimisation/: CGLS.cpp  CGLS.hpp  CMakeLists.txt  LBFGS.cpp  LBFGS.hpp  Linear.hpp  NLCG.cpp  NLCG.hpp  NonLinear.hpp  Optimisable.hpp  SplitBregman.cpp  SplitBregman.hpp  lbfgs.c  lbfgs.h
src/tests/: algos.hpp  cgsense.hpp  compressedsensing.hpp  creators.hpp  directmethod.hpp  directmethod.hpp~  dummy.hpp  dwt.hpp  dwt2test.hpp  fft.hpp  fft.hpp~  grappa.hpp  internal.hpp  io.hpp  iotest.hpp  ismrmrdtest.hpp  karb.hpp  ktpoints.hpp  ktpoints.hpp~  matlab.hpp  matlab.hpp~  mpi_test.cpp  mpi_test.hpp  mpitest.hpp  nifty.hpp  nifty.hpp~  nufft.hpp  nufft.hpp~  ocltest.hpp  relativesensitivities.hpp  relativesensitivities.hpp~  sense.hpp  sha256test.hpp  slicegrad.hpp  spiral.hpp  syngo.hpp  tests.hpp
src/tinyxml/: CMakeLists.txt  Makefile.am  Makefile.in  Makefile.w64  node_set.cpp  tinyxml.h  tinyxmlparser.cpp  xpath_expression.cpp  xpath_expression.h  xpath_processor.cpp  xpath_stream.h  xpath_syntax.cpp
(+163 files in other folders)
